Adjust the TCP asymmetrical claim to be a bit more low-key, add NTP-reference

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -685,3 +685,19 @@ This dissertation defines a framework for understanding software architecture vi
 	howpublished = {Available at: \url{http://www.internetlivestats.com/internet-users} Referenced 19.4.2015.}
 }
 
+@article{mills_internet_1991,
+	title = {Internet time synchronization: the network time protocol},
+	volume = {39},
+	issn = {0090-6778},
+	shorttitle = {Internet time synchronization},
+	doi = {10.1109/26.103043},
+	abstract = {The network time protocol (NTP), which is designed to distribute time information in a large, diverse system, is described. It uses a symmetric architecture in which a distributed subnet of time servers operating in a self-organizing, hierarchical configuration synchronizes local clocks within the subnet and to national time standards via wire, radio, or calibrated atomic clock. The servers can also redistribute time information within a network via local routing algorithms and time daemons. The NTP synchronization system, which has been in regular operation in the Internet for the last several years, is described, along with performance data which show that timekeeping accuracy throughout most portions of the Internet can be ordinarily maintained to within a few milliseconds, even in cases of failure or disruption of clocks, time servers, or networks},
+	number = {10},
+	journal = {IEEE Transactions on Communications},
+	author = {Mills, D.L.},
+	month = oct,
+	year = {1991},
+	keywords = {Clocks, computer networks, distributed subnet, hierarchical configuration, Internet, IP networks, large diverse networks, local routing algorithms, Maintenance, Milling machines, national time standards, Network servers, network time protocol, Protocols, symmetric architecture, synchronisation, Synchronization, time daemons, time servers, time synchronization, Web server, Wire},
+	pages = {1482--1493},
+	file = {IEEE Xplore Abstract Record:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/QU6BGEAM/abs_all.html:text/html;IEEE Xplore Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NPE8NAQ6/Mills - 1991 - Internet time synchronization the network time pr.pdf:application/pdf}
+}
