Finetune .bibtex content

--- a/thesis-mnie.bib
+++ b/thesis-mnie.bib
@@ -208,8 +208,11 @@ Research associates Kyle Nicholas and Lisa Parker were instrumental in undertaki
 
 @article{piirainen_constructive_2013,
 	title = {Constructive Synergy in Design Science Research: A Comparative Analysis of Design Science Research and the Constructive Research Approach},
-	author = {Piirainen, Kalle and Gonzalez, Rafael},
-	year = {2013},
+	author = {Piirainen, Kalle A and Gonzalez, Rafael A},
+	journal={Liiketaloudellinen Aikakauskirja},
+	number={3-4},
+	pages={206--234},
+	year={2014},
 	file = {Piirainen and Gonzalez - 2013 - Seeking Constructive Synergy Design Science and t.pdf:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/7KGCK67H/Piirainen and Gonzalez - 2013 - Seeking Constructive Synergy Design Science and t.pdf:application/pdf}
 }
 
@@ -665,12 +668,11 @@ This dissertation defines a framework for understanding software architecture vi
 	file = {ACM Full Text PDF:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/D558MNC9/Bezemer and Zaidman - 2010 - Multi-tenant SaaS Applications Maintenance Dream .pdf:application/pdf}
 }
 
-@article{wharry_html5_2014,
+@misc{wharry_html5_2014,
 	title = {{HTML}5 {Offline} {Technologies}},
 	url = {http://andreawharry.com/assets/img/portfolio/WharryAndreaFinalPaper.pdf},
 	urldate = {2015-04-19},
 	author = {Wharry, Andrea},
-	year = {2014},
 	file = {[PDF] osoitteesta andreawharry.com:/Users/mnie/Library/Application Support/Zotero/Profiles/pduyuh73.default/zotero/storage/NG86PEGU/Wharry - 2014 - HTML5 Offline Technologies.pdf:application/pdf},
 	howpublished = {Available at: \url{http://andreawharry.com/assets/img/portfolio/WharryAndreaFinalPaper.pdf} Referenced 19.4.2015.}
 }
